# visa-assessment

./: README.md  docs.md  pyproject.toml  test_cv.txt
evaluation/: gold_eval.py  gold_set.json  nli_scorer.py
tests/: test_api.py
visa_assessment/: api.py  eligibility.py  judge.py
